Add Maven Settings file support to templates
- Use global defaults to id-map all the Config File Provider settings
  files
- Refactor the role of releng-templates.yaml to be a starting template
  that projects must copy and modify

Change-Id: Ic55e7b3ae655af52a60b8598af368d62a800b90e
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>